[project]
name = "mcp-blockchain-rail"
version = "0.1.0"
description = "MCP Server for Blockchain Rail interactions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "web3",
    "requests"
]

[project.scripts]
mcp-blockchain-rail = "mcp_blockchain_rail.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_blockchain_rail"]
